# TonalIQ

./: .gitignore  CONTEXT.md  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/src/: __init__.py
backend/src/api/: __init__.py  config.py  main.py
backend/src/models/: __init__.py  config.py  dataset.py  explain.py  onnx_export.py  train.py
backend/src/pipeline/: __init__.py  download_data.py  preprocess.py
backend/src/speech_emotion_recognition_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: app.js  index.html  style.css
tests/: test_backend.py  test_pipeline.py
