[project]
name = "speech-emotion-recognition-backend"
version = "0.1.0"
description = "Headless API backend for Speech Emotion Recognition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "websockets>=11.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "librosa>=0.10.0",
    "noisereduce>=2.0.1",
    "onnxruntime>=1.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "soundfile>=0.12.1",
    "scipy>=1.10.0",
    "pydub>=0.25.1"
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
